--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -1,1 +1,14 @@
-<p>topic-index works!</p>
+<div class="row">
+  <div class="col-4 p-3" *ngFor="let topic of topics">
+    <mat-card class="card cursor-pointer" (click)="onCardClick(topic.url)">
+      <mat-card-header>
+        <mat-card-title>{{topic.title}}</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <p>{{topic.description}}</p>
+        <mat-divider></mat-divider>
+      </mat-card-content>
+    </mat-card>
+
+  </div>
+</div>
