--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-4 p-3" *ngFor="let topic of topics">
+  <div class="col-sm-12 col-md-12 col-lg-4 p-3" *ngFor="let topic of topics">
     <mat-card class="card cursor-pointer" (click)="onCardClick(topic.url)">
       <mat-card-header>
         <mat-card-title>{{topic.title}}</mat-card-title>
