added temporary under construction landing

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="example-container">
-  <mat-drawer #drawer mode="side"  class="drawer-main" opened>
+  <mat-drawer #drawer mode="side"  class="drawer-main">
     <mat-list role="list">
       <mat-list-item
         *ngFor="let link of navLinks"
