--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -1,14 +1,25 @@
 <div class="row">
-  <div class="col-sm-12 col-md-12 col-lg-4 p-3" *ngFor="let topic of topics">
+  <div class="col-12 mt-5">
+    <mat-chip-listbox aria-label="Fish selection">
+      <!--<mat-chip-option color="accent" selected>Accent fish</mat-chip-option>-->
+      <mat-chip-option
+        color="warn"
+        *ngFor="let category of categories"
+        (selectionChange)="onChipClick($event)"
+      >
+        {{ category }}
+      </mat-chip-option>
+    </mat-chip-listbox>
+  </div>
+  <div class="col-sm-12 col-md-12 col-lg-4 p-3" *ngFor="let topic of filteredTopics">
     <mat-card class="card cursor-pointer" (click)="onCardClick(topic.url)">
       <mat-card-header>
-        <mat-card-title>{{topic.title}}</mat-card-title>
+        <mat-card-title>{{ topic.title }}</mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <p>{{topic.description}}</p>
+        <p>{{ topic.description }}</p>
         <mat-divider></mat-divider>
       </mat-card-content>
     </mat-card>
-
   </div>
 </div>
