--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-drawer-container class="example-container">
+<mat-drawer-container class="example-container" autosize>
   <mat-drawer #drawer mode="side"  class="drawer-main">
     <mat-list role="list">
       <mat-list-item
