adapted site for mobile views

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,14 +1,14 @@
-<div class="row">
-  <div class="col-6 mb-5 text-center">
-    <img class="logo mt-5" src="./assets/images/logo-white.jpg" alt="logo-white">
+<div class="row bg-white">
+  <div class="col-sm-12 col-xl-6 mb-5 text-center">
+    <img class="img-fluid mt-5" src="./assets/images/logo-white.jpg" alt="logo-white">
   </div>
-  <div class="col-6 d-flex flex-column justify-content-center align-items-center ">
+  <div class="col-sm-12 col-xl-6 d-flex flex-column justify-content-center align-items-center">
     <h1 class="title ">
       <b>
         Salafiyyah Colombia
       </b>
     </h1>
-    <p>
+    <p class="text-center text-lg-start">
       Nuestra organización fue fundada en enero de 2024 con la intención de hacer dawah tanto a no musulmanes como a
       musulmanes por medio del corán y la sunnah con el entendimiento de las 3 generaciones favoritas.
     </p>
