--- a/src/app/pages/pages/pages.component.html
+++ b/src/app/pages/pages/pages.component.html
@@ -1,3 +1,7 @@
-<app-header class="header"></app-header>
-<app-sidebar class="sidebar"></app-sidebar>
-<app-footer class="footer"></app-footer>
+<div class="row">
+  <div class="col-12">
+    <app-header class="header"></app-header>
+    <app-sidebar class="sidebar"></app-sidebar>
+    <app-footer class="footer"></app-footer>
+  </div>
+</div>
