--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,10 +1,10 @@
 <div class="row">
   <div class="col-12">
-    <div class="container">
-      <img src="./assets/images/under-construction.png" alt="Construction Logo" class="logo" style="width: 600px">
-      <h1 class="heading">Sitio en construcción</h1>
-      <p class="message">Lo sentimos en este momento esta pagina esta siendo desarrollada.</p>
-      <p class="contact-info">Para quejas por favor contactarnos en: <a href="mailto:salafiyyahColombia@gmail.com">salafiyyahColombia@gmail.com</a>.</p>
+    <div class="container text-center">
+      <h1 class="fs-1 mt-5">Sitio en construcción</h1>
+      <p class="message fs-3">Lo sentimos en este momento esta pagina esta siendo desarrollada.</p>
+      <p class="contact-info fs-5">Para suferencias por favor contactarnos en: <a href="mailto:salafiyyahColombia@gmail.com">salafiyyahColombia@gmail.com</a>.</p>
+      <img src="./assets/images/under-construction.png" alt="Construction Logo" class="img-fluid ">
     </div>
   </div>
 </div>
