--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-12 mt-5">
-    <mat-chip-listbox aria-label="Fish selection">
-      <!--<mat-chip-option color="accent" selected>Accent fish</mat-chip-option>-->
+    <mat-chip-listbox>
       <mat-chip-option
         color="warn"
         *ngFor="let category of categories"
@@ -18,6 +17,15 @@
       </mat-card-header>
       <mat-card-content>
         <p>{{ topic.description }}</p>
+        <mat-chip-listbox>
+          <mat-chip-option
+            color="warn"
+            *ngFor="let category of topic.categories"
+            [disabled]="true"
+          >
+            {{ category }}
+          </mat-chip-option>
+        </mat-chip-listbox>
       </mat-card-content>
     </mat-card>
   </div>
