--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-12 text-center bg-success text-white p-4">
-    Copyright 2024
+    Salafiyyah Colombia Copyright ©{{year}} todos los derechos reservados
   </div>
 </div>
