Added meta tags and custom material theme

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="row bg-white">
+<div class="row bg-white pb-5">
   <div class="col-sm-12 col-xl-6 mb-5 text-center">
     <img class="img-fluid mt-5" src="./assets/images/logo-white.jpg" alt="logo-white">
   </div>
