--- a/src/app/pages/thrustable-sources/thrustable-sources.component.html
+++ b/src/app/pages/thrustable-sources/thrustable-sources.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row pb-5">
   <div class="col-12">
     <h1 class="fs-1 mt-5 text-center">Lista de canales fiables de la da’wah Salafiyyah en español</h1>
     <div class="container">
