--- a/src/app/pages/contact-us/contact-us.component.scss
+++ b/src/app/pages/contact-us/contact-us.component.scss
@@ -1,25 +1,11 @@
-.container {
-  text-align: center;
-}
+.mat-mdc-card {
+  height: 100%;
+  flex-grow: 1;
 
-.logo {
-  margin-bottom: 20px;
-  width: 150px;
-  height: auto;
-}
-
-.heading {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-.message {
-  font-size: 16px;
-  margin-bottom: 40px;
-  color: #666;
-}
-
-.contact-info {
-  font-size: 14px;
-  color: #999;
+  .mat-mdc-card-actions {
+    margin-top: auto;
+    .card-button {
+      width: 100%;
+    }
+  }
 }
