--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -1,5 +1,6 @@
 <div class="row pb-5">
-  <div class="col-12 mt-5">
+  <div class="col-12 mt-5 px-4">
+    <h1>Categorias</h1>
     <mat-chip-listbox>
       <mat-chip-option
         *ngFor="let category of categories"
@@ -9,7 +10,21 @@
       </mat-chip-option>
     </mat-chip-listbox>
   </div>
-  <div class="col-sm-12 col-md-12 col-lg-4 p-3" *ngFor="let topic of filteredTopics">
+
+  <div class="col-12 px-4">
+    <mat-form-field class="mt-3">
+      <mat-icon matPrefix>search</mat-icon>
+      <input
+        matInput
+        type="search"
+        placeholder="Busque aquí por titulo"
+        class="search-input"
+        (input)="onSearchInput($event)"
+      >
+    </mat-form-field>
+  </div>
+
+  <div class="col-sm-12 col-md-12 col-lg-4 p-3 px-4" *ngFor="let topic of filteredTopics">
     <mat-card class="card">
       <mat-card-header>
         <mat-card-title>{{ topic.title }}</mat-card-title>
