--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -1,6 +1,6 @@
 <div class="row pb-5">
   <div class="col-12 mt-5 px-4">
-    <h1>Categorias</h1>
+    <h1>Categorías</h1>
     <mat-chip-listbox>
       <mat-chip-option
         *ngFor="let category of categories"
