added video section with some playlist

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <mat-drawer-container class="example-container" autosize>
-  <mat-drawer #drawer mode="side"  class="drawer-main">
+  <mat-drawer #drawer mode="side"  class="drawer-main ps-3">
     <mat-list role="list">
       <mat-list-item
         *ngFor="let link of navLinks"
