--- a/src/app/pages/videos/videos.component.html
+++ b/src/app/pages/videos/videos.component.html
@@ -5,10 +5,10 @@
     </div>
   </div>
 
-  <div class="col-12 mt-3" *ngFor="let playlist of playlists;">
+  <div class="col-12 mt-3 pb-5" *ngFor="let playlist of playlists;">
     <div class="container">
       <div class="row">
-        <div class="col-3 p-3" *ngFor="let video of playlist.items;">
+        <div class="col-lg-3 col-md-12 col-sm-12 p-3" *ngFor="let video of playlist.items;">
           <mat-card class="example-card">
             <mat-card-header>
               <mat-card-title>
