--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -3,7 +3,7 @@
     <h1 class="fs-1 text-center mt-5 ">Siguenos en nuestras redes sociales!</h1>
 
     <div class="row px-5 mt-5 pb-5">
-      <div class="col pb-5" *ngFor="let item of socialMediaItems">
+      <div class="col pb-5 animate__animated animate__fadeIn" *ngFor="let item of socialMediaItems">
         <mat-card class="text-center d-flex justify-content-center rounded-2 mt-5">
           <mat-card-header class="justify-content-center">
             <mat-card-title class="fs-4">{{item.socialMediaName}}</mat-card-title>
