--- a/src/app/pages/thrustable-sources/thrustable-sources.component.html
+++ b/src/app/pages/thrustable-sources/thrustable-sources.component.html
@@ -2,7 +2,7 @@
   <div class="col-12">
     <h1 class="fs-1 mt-5 text-center">Lista de canales fiables de la da’wah Salafiyyah en español</h1>
     <div class="container">
-      <div class="social-media-list" *ngFor="let socialItem of trustableSites">
+      <div class="social-media-list animate__animated animate__fadeIn" *ngFor="let socialItem of trustableSites">
         <h3 class="fs-3 mt-5">
           <b>
             {{socialItem.socialMediaName}}
