--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -24,7 +24,7 @@
     </mat-form-field>
   </div>
 
-  <div class="col-sm-12 col-md-12 col-lg-4 p-3 px-4" *ngFor="let topic of filteredTopics">
+  <div class="col-sm-12 col-md-12 col-lg-4 p-3 px-4 animate__animated animate__fadeIn" *ngFor="let topic of filteredTopics">
     <mat-card class="card">
       <mat-card-header>
         <mat-card-title>{{ topic.title }}</mat-card-title>
