--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,8 +1,8 @@
 <div class="row bg-white pb-5">
-  <div class="col-sm-12 col-xl-6 mb-5 text-center">
+  <div class="col-sm-12 col-xl-6 mb-5 text-center animate__animated animate__fadeIn">
     <img class="img-fluid mt-5" src="./assets/images/logo-white.jpg" alt="logo-white">
   </div>
-  <div class="col-sm-12 col-xl-6 d-flex flex-column justify-content-center align-items-center">
+  <div class="col-sm-12 col-xl-6 d-flex flex-column justify-content-center align-items-center animate__animated animate__fadeIn">
     <h1 class="title ">
       <b>
         Salafiyyah Colombia
@@ -14,7 +14,7 @@
     </p>
     <div class="row">
       <div class="col-12">
-        <ul class="list-group list-group-horizontal mt-5">
+        <ul class="list-group list-group-horizontal mt-5 animate__animated animate__fadeIn">
           <li
             class="list-group-item cursor-pointer fs-6"
             [ngClass]="item.style"
