--- a/src/app/pages/topic-index/topic-index.component.scss
+++ b/src/app/pages/topic-index/topic-index.component.scss
@@ -7,6 +7,15 @@
   height: 100%;
   flex-grow: 1;
 
+  .title {
+    height: 200px;
+  }
+
+  .card-img {
+    height: 250px;
+    width: auto;
+  }
+
   .mat-mdc-card-actions {
     margin-top: auto;
     .card-button {
