--- a/src/app/pages/thrustable-sources/thrustable-sources.component.html
+++ b/src/app/pages/thrustable-sources/thrustable-sources.component.html
@@ -2,6 +2,14 @@
   <div class="col-12">
     <h1 class="fs-1 mt-5 text-center">Lista de canales fiables de la da’wah Salafiyyah en español</h1>
     <div class="container">
+      <p class="fs-4">
+        Anas ibn Malik reportó: <br><br>"El Mensajero de Allah, que la paz y las bendiciones de Allah sean con él, dijo: "Buscar conocimiento es una obligación para todo musulmán"."
+      </p>
+      <span>Fuente: Sunan Ibn Mājah 224</span>
+      <br>
+      <span>Grado: Sahih (auténtico) según Al-Albani</span>
+    </div>
+    <div class="container">
       <div class="social-media-list animate__animated animate__fadeIn" *ngFor="let socialItem of trustableSites">
         <h3 class="fs-3 mt-5">
           <b>
