--- a/src/app/pages/topic-index/topic-index.component.html
+++ b/src/app/pages/topic-index/topic-index.component.html
@@ -1,6 +1,7 @@
 <div class="row pb-5">
   <div class="col-12 mt-5 px-4">
-    <h1>Indice de temas</h1>
+    <h1 class="text-center fs-1">Indice de temas</h1>
+    <h2>Categorías</h2>
     <mat-chip-listbox>
       <mat-chip-option
         *ngFor="let category of categories"
@@ -12,7 +13,8 @@
   </div>
 
   <div class="col-12 px-4">
-    <mat-form-field class="mt-3">
+    <h2 class="mt-3">Buscar</h2>
+    <mat-form-field>
       <mat-icon matPrefix>search</mat-icon>
       <input
         matInput
@@ -23,36 +25,6 @@
       >
     </mat-form-field>
   </div>
-
-  <!--<div class="col-sm-12 col-md-12 col-lg-4 p-3 px-4 animate__animated animate__fadeIn" *ngFor="let topic of filteredTopics">
-    <mat-card class="card">
-      <mat-card-header>
-        <mat-card-title>{{ topic.title }}</mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <p>{{ topic.description }}</p>
-        <mat-chip-listbox>
-          <mat-chip-option
-            color="warn"
-            *ngFor="let category of topic.categories"
-            [disabled]="true"
-          >
-            {{ category }}
-          </mat-chip-option>
-        </mat-chip-listbox>
-      </mat-card-content>
-      <mat-card-actions>
-        <button
-          type="button"
-          (click)="onCardClick(topic.url)"
-          mat-button
-          class="bg-success text-white card-button"
-        >
-          Ir a la publicación
-        </button>
-      </mat-card-actions>
-    </mat-card>
-  </div>-->
 
   <div class="col-sm-12 col-md-12 col-lg-4 p-3 px-4 animate__animated animate__fadeIn" *ngFor="let post of filteredPostList">
     <mat-card class="example-card">
