--- a/src/app/pages/thrustable-sources/thrustable-sources.component.html
+++ b/src/app/pages/thrustable-sources/thrustable-sources.component.html
@@ -1,45 +1,69 @@
 <div class="row pb-5">
   <div class="col-12">
-    <h1 class="fs-1 mt-5 text-center">Lista de canales fiables de la da’wah Salafiyyah en español</h1>
+    <h1 class="fs-1 mt-5 text-center">Lista de canales confiables</h1>
     <div class="container">
-      <p class="fs-4">
-        Anas ibn Malik reportó: <br><br>"El Mensajero de Allah, que la paz y las bendiciones de Allah sean con él, dijo: "Buscar conocimiento es una obligación para todo musulmán"."
-      </p>
-      <span>Fuente: Sunan Ibn Mājah 224</span>
-      <br>
-      <span>Grado: Sahih (auténtico) según Al-Albani</span>
-    </div>
-    <div class="container">
-      <div class="social-media-list animate__animated animate__fadeIn" *ngFor="let socialItem of trustableSites">
-        <h3 class="fs-3 mt-5">
-          <b>
-            {{socialItem.socialMediaName}}
-          </b>
-          <fa-icon [class]="socialItem.classes" [icon]="socialItem.icon"></fa-icon>
-        </h3>
-        <mat-list>
-          <mat-list-item *ngFor="let site of socialItem.sites">
-            <span class="fs-5" matListItemTitle>{{site.name}}</span>
-            <span
-              class="text-primary cursor-pointer fs-6"
-              matListItemLine
-              *ngFor="let url of site.urls"
-              (click)="onSocialMedialClick(url)"
-            >
+      <mat-tab-group>
+        <mat-tab label="Español">
+          <div class="social-media-list animate__animated animate__fadeIn" *ngFor="let socialItem of trustableSitesSpanish">
+            <h3 class="fs-3 mt-5">
+              <b>
+                {{socialItem.socialMediaName}}
+              </b>
+              <fa-icon [class]="socialItem.classes" [icon]="socialItem.icon"></fa-icon>
+            </h3>
+            <mat-list>
+              <mat-list-item *ngFor="let site of socialItem.sites">
+                <span class="fs-5" matListItemTitle>{{site.name}}</span>
+                <span
+                  class="text-primary cursor-pointer fs-6"
+                  matListItemLine
+                  *ngFor="let url of site.urls"
+                  (click)="onSocialMedialClick(url)"
+                >
             <a>
               {{url}}
             </a>
           </span>
-          </mat-list-item>
-        </mat-list>
-      </div>
-
-      <p class="fs-4 mt-5">
-        Recopilado por: <a
-        class="text-primary cursor-pointer"
-        (click)="onSocialMedialClick('https://www.facebook.com/profile.php?id=100079475621515')"
-      >Bint Bellahouel Al-Jazaairiy</a>
-      </p>
+              </mat-list-item>
+            </mat-list>
+          </div>
+          <p class="fs-4 mt-5">
+            Recopilado por: <a
+            class="text-primary cursor-pointer"
+            (click)="onSocialMedialClick('https://www.facebook.com/profile.php?id=100079475621515')"
+          >Bint Bellahouel Al-Jazaairiy</a>
+          </p>
+        </mat-tab>
+        <mat-tab label="English">
+          <div class="social-media-list animate__animated animate__fadeIn" *ngFor="let socialItem of trustableSitesEnglish">
+            <h3 class="fs-3 mt-5">
+              <b>
+                {{socialItem.socialMediaName}}
+              </b>
+              <fa-icon [class]="socialItem.classes" [icon]="socialItem.icon"></fa-icon>
+            </h3>
+            <mat-list>
+              <mat-list-item *ngFor="let site of socialItem.sites">
+                <span class="fs-5" matListItemTitle>{{site.name}}</span>
+                <span
+                  class="text-primary cursor-pointer fs-6"
+                  matListItemLine
+                  *ngFor="let url of site.urls"
+                  (click)="onSocialMedialClick(url)"
+                >
+            <a>
+              {{url}}
+            </a>
+          </span>
+              </mat-list-item>
+            </mat-list>
+          </div>
+          <p class="fs-4 mt-5">
+            Compiled by: <a
+          >Da’waatus Salafiyyah Brisbane</a>
+          </p>
+        </mat-tab>
+      </mat-tab-group>
     </div>
   </div>
 </div>
