fixeds issue with video filtering and added more detailed about us description

--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -9,8 +9,7 @@
       </b>
     </h1>
     <p class="text-center text-lg-start">
-      Nuestra organización fue fundada en enero de 2024 con la intención de hacer dawah tanto a no musulmanes como a
-      musulmanes por medio del corán y la sunnah con el entendimiento de las 3 generaciones favoritas.
+      En Salafiyyah Colombia somos una organización islámica fundada en Colombia, dedicada a la propagación de la pura creencia islámica, basada en las enseñanzas correctas y auténticas del Qur'an y la auténtica Sunnah, según el entendimiento de los predecesores piadosos, es decir, las primeras tres generaciones del Islam y aquellos que siguen su camino hasta el día del juicio. También nos dedicamos a purificar la desviación y la mala orientación que se ha infiltrado en la religión, tanto en el país como en el extranjero, en la medida de nuestras posibilidades y con el permiso de Allah. Oramos para lograr nuestros objetivos con la ayuda de conferencias, seminarios y enlaces telefónicos realizados con estudiantes de conocimiento. Nuestro sitio está presentado en un formato organizado y de fácil acceso, lo que facilita la entrega de este conocimiento.
     </p>
     <div class="row">
       <div class="col-12">
